<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.comino</groupId>
	<artifactId>MAVGCL</artifactId>
	<version>0.8.23</version>
	<packaging>jar</packaging>

	<name>MAVGCL2</name>

	<repositories>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
		<repository>
			<id>in-project</id>
			<name>In Project Repo</name>
			<url>file://${project.basedir}/lib</url>
		</repository>
	</repositories>


	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.target>1.10</maven.compiler.target>
		<maven.compiler.source>1.10</maven.compiler.source>
	</properties>

	<dependencies>
		<dependency>
			<groupId>mavbase</groupId>
			<artifactId>mavbase</artifactId>
			<version>0.0.1</version>
		</dependency>
		<dependency>
			<groupId>jcodec</groupId>
			<artifactId>jcodec-javase</artifactId>
			<version>0.1.9</version>
		</dependency>
		<dependency>
			<groupId>com.comino</groupId>
			<artifactId>mavmap</artifactId>
			<version>0.0.1</version>
		</dependency>
		<dependency>
			<groupId>com.comino</groupId>
			<artifactId>mavcom</artifactId>
			<version>0.0.1</version>
		</dependency>
		<dependency>
			<groupId>com.github.WilliamAHartman</groupId>
			<artifactId>Jamepad</artifactId>
			<version>1.3.2</version>
		</dependency>
		<dependency>
			<groupId>net.objecthunter</groupId>
			<artifactId>exp4j</artifactId>
			<version>0.4.8</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.6</version>
		</dependency>
		<dependency>
			<groupId>com.googlecode.soundlibs</groupId>
			<artifactId>jlayer</artifactId>
			<version>1.0.1.4</version>
		</dependency>
		<dependency>
			<groupId>com.github.javaparser</groupId>
			<artifactId>javaparser-core</artifactId>
			<version>2.3.0</version>
		</dependency>
		<dependency>
			<groupId>org.jcodec</groupId>
			<artifactId>jcodec</artifactId>
			<version>0.1.9</version>
		</dependency>
		<dependency>
			<groupId>eu.hansolo</groupId>
			<artifactId>Medusa</artifactId>
			<version>7.4</version>
		</dependency>
		<dependency>
			<groupId>objimport</groupId>
			<artifactId>objimport</artifactId>
			<version>0.8.0</version>
		</dependency>
		
		
	</dependencies>

	<build>
		<resources>
			<resource>
				<directory>src/main/java</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<archive>
						<index>false</index>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>com.comino.flight.MainApp</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>install</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/deploy</outputDirectory>
							<overWriteReleases>true</overWriteReleases>
							<overWriteSnapshots>true</overWriteSnapshots>
							<excludeTransitive>false</excludeTransitive>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<id>copy-resource-one</id>
						<phase>install</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/deploy</outputDirectory>
							<resources>
								<resource>
									<directory>${project.basedir}</directory>
									<includes>
										<include>MAVGAnalysis.icns</include>
										<include>MAVGAnalysis.png</include>
									</includes>
								</resource>
							</resources>
						</configuration>
					</execution>
					<execution>
						<id>copy-resource-two</id>
						<phase>install</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/deploy</outputDirectory>
							<resources>
								<resource>
									<directory>${project.build.directory}</directory>
									<includes>
										<include>MAVG*.jar</include>
									</includes>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>


</project>
